syntax = "proto3";

package hai;
option java_package = "bot.hai.proto";
option java_multiple_files = true;

import "common.proto";

// SlashService provides methods for managing slash
service SlashService {
  // Sends button click message
  rpc reportBug(StringRequest) returns (Empty);
  rpc condense(StringRequest) returns (Empty);
}
