syntax = "proto3";

package hai;
option java_package = "bot.hai.proto";
option java_multiple_files = true;

import "common.proto";

service WebService {
  rpc checkIsImageUrl(StringRequest) returns (IsImageUrl);
}

message IsImageUrl {
  bool is_image = 1;
  string url = 2;
}
